examples/should-fail/f21_bad_annotation_non_sort_kind.lean
def demo3_bad_annotation_non_sort_kind : Type :=
  (Prop : (fun (A : Type) => A))
